@@ -5,3 +5,11 @@ dependencies {
 uploadArchives.repositories.mavenDeployer.pom.project {
    description='A re-usable asynchronous http2 parser'
 }
+
+compileTestJava {
+  options.compilerArgs += ["--add-modules", "java.xml.bind"]
+}
+
+test {
+  jvmArgs += ["--add-modules", "java.xml.bind"]
+}
